* Turned CommandBuilder.java into an ACTUAL CommandBuilder * Moved old command registration methods to CommandRegistration.java * Registry.File confirmed not working in Java 9+ (ClassLoader changes) * FINALIZED new and long sought out PersistentContainer * Moved some region stuff to inner classes * Renamed EventBuilder.java to EasyListener * Forced TextLib implementation on both NewComponent & OldComponent * All String & component utility are ready for 1.17 * Updated for Java 11 LTS+ Versions lower will not work.